// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionalComponentRequiredStyles() should return correct styles for theme: dark 1`] = `
{
  "required": {
    "color": "#fc1717",
    "userSelect": "none",
  },
}
`;

exports[`getFunctionalComponentRequiredStyles() should return correct styles for theme: light 1`] = `
{
  "required": {
    "color": "#e00000",
    "userSelect": "none",
  },
}
`;
